--- a/QuoteGenerator/css.css
+++ b/QuoteGenerator/css.css
@@ -13,4 +13,7 @@ body{
     font-family: Montserrat, sans-serif;
     font-weight: 700;
     text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
