--- a/QuoteGenerator/css.css
+++ b/QuoteGenerator/css.css
@@ -50,4 +50,24 @@ body{
 
 }
 
+.button-container{
+    margin-top: 15px;
+    display: flex;
+    justify-content: space-between;
+}
+
+
+/* mediq query Tablet or smaller */
+
+@media screen and (max-width: 1000px){
+    .quote-container {
+        margin: auto 10px;
+    }
+
+    .quote-text {
+        font-size: 2.5rem;
+    }
+}
+
+
 
