--- a/QuoteGenerator/css.css
+++ b/QuoteGenerator/css.css
@@ -57,6 +57,41 @@ body{
 }
 
 
+button {
+    cursor: pointer;
+    font-size: 1.2rem;
+    height: 2.5rem;
+    border: none;
+    border-radius: 10px;
+    color: #ffffff;
+    background: #333;
+    outline: none;
+    padding: 0.5rem 1.8rem;
+    box-shadow: 0 0.3rem rgba(123, 121, 121, 0.65);
+
+}
+
+botton:hover{
+    filter: brightness(110%);
+
+}
+
+button:active {
+    transform: translate(0, 0.3rem);
+    box-shadow: 0 0.1rem rgba(255, 255, 255, 0.65);
+
+}
+
+.twitter-button:hover{
+    color: #38a1f3;
+
+}
+
+.fa-twitter {
+    font-size: 1.5rem;
+
+}
+
 /* mediq query Tablet or smaller */
 
 @media screen and (max-width: 1000px){
